修改了\makechinesetitle的底层实现

--- a/config/buptthesis.cfg
+++ b/config/buptthesis.cfg
@@ -16,11 +16,11 @@
 \def\BUPT@label@university{北京邮电大学}
 \def\BUPT@label@thesis{学位论文}
 \def\BUPT@label@title{题目：}
-\def\BUPT@label@studentid{学~~~~~~号：}
-\def\BUPT@label@name{姓~~~~~~名：}
-\def\BUPT@label@major{专~~~~~~业：}
-\def\BUPT@label@supervisor{导~~~~~~师：}
-\def\BUPT@label@institute{学~~~~~~院：}
+\def\BUPT@label@studentid{学\quad 号：}
+\def\BUPT@label@name{姓\quad 名：}
+\def\BUPT@label@major{专\quad 业：}
+\def\BUPT@label@supervisor{导\quad 师：}
+\def\BUPT@label@institute{学\quad 院：}
 
 \def\BUPT@label@phddegree{博士}
 \def\BUPT@label@masterdegree{硕士}
@@ -42,7 +42,7 @@
 \def\BUPT@value@major{（专业）}
 \def\BUPT@value@supervisor{（导师姓名）}
 \def\BUPT@value@institute{（学院）}
-\def\BUPT@value@chinesedate{\the\year~年~\the\month~月~\the\day~日}
+\def\BUPT@value@chinesedate{\the\year 年 \the\month 月 \the\day 日}
 \def\BUPT@value@degreetype{工学}
 
 %% -----------------------------------------------------------------
@@ -91,7 +91,7 @@
 \def\BUPT@label@englishabstract{ABSTRACT}
 \def\BUPT@label@englishkeywords{KEY WORDS:}
 \def\BUPT@label@nomenclature{符号列表}
-\def\BUPT@label@abbreviation{附录一~~缩略语列表}
+\def\BUPT@label@abbreviation{附录一\quad 缩略语列表}
 \def\BUPT@label@acknowledgement{致\quad 谢}
 \def\BUPT@label@publications{攻读学位期间发表的学术论文目录}
 
