add instruction to citation

--- a/config/buptthesis.cfg
+++ b/config/buptthesis.cfg
@@ -34,8 +34,8 @@
 
 \def\BUPT@value@confidential{\@empty}
 \def\BUPT@value@confidentialtime{\@empty}
-\def\BUPT@value@schoolname{resources/name.pdf}
-\def\BUPT@value@schoollogo{resources/logo.pdf}
+\def\BUPT@value@schoolname{resources/name.png}
+\def\BUPT@value@schoollogo{resources/logo.png}
 \def\BUPT@value@title{（论文题目）}
 \def\BUPT@value@studentid{（作者学号）}
 \def\BUPT@value@name{（作者姓名）}
